--- a/Client/src/Style/Globle.css
+++ b/Client/src/Style/Globle.css
@@ -44,7 +44,9 @@ body {
 a {
   text-decoration: none;
 }
-
+ul {
+  padding: 0;
+}
 form {
   display: flex;
   flex-direction: column;
@@ -62,6 +64,7 @@ form .form-control .bar {
 form .form-control label {
   position: absolute;
   margin-left: 1.3em;
+
   transition: all 0.5s ease;
 }
 form .form-control input {
@@ -74,7 +77,7 @@ form .form-control input:focus {
 }
 form .form-control input:valid ~ label {
   margin-bottom: 5em;
-  margin-left: 1em;
+  margin-left: 3px;
   margin-top: 0.1em;
 }
 form .form-control input:focus ~ .bar {
@@ -93,6 +96,7 @@ form input[type="submit"] {
 }
 
 .btn {
+  cursor: pointer;
   padding: 1rem 2rem;
   margin: 0.5rem;
   border: 2px solid transparent;
@@ -127,4 +131,7 @@ form input[type="submit"] {
   background-color: #fff;
   padding: 1em;
   background-color: rgba(17, 25, 40, 0.43);
+}
+.error {
+  color: #f56b6b;
 }
