Fixed PlaceOrder Bug and Styled Compo

--- a/Client/src/Style/Globle.css
+++ b/Client/src/Style/Globle.css
@@ -108,6 +108,7 @@ form input[type="submit"] {
 .btn:hover {
   color: var(--secondary-color);
   background-color: black;
+  border: 2px solid var(--secondary-color);
 }
 
 .btn-gray {
