--- a/Client/src/Style/Globle.css
+++ b/Client/src/Style/Globle.css
@@ -20,6 +20,8 @@
   --secondary-light-color: #d9b5db;
   --secondary-dark-color: #7f0e7f;
   --assertive-color: #3d2c8d;
+  --bg-dark: #150d1e;
+  --bg-light: #e2d7d7;
   --font-stack: "cursive";
   --Secondary-font-stack: "Nunito", sans-serif;
   --media-mobile: 576px;
@@ -37,12 +39,16 @@ body {
   font-family: Arial, Helvetica, sans-serif;
   line-height: 1.5;
   margin: 0;
-  background-color: #150d1e;
-  color: #916bbf;
+  background-color: var(--bg-dark);
+  color: var(--main-color);
 }
 
 a {
   text-decoration: none;
+  text-align: center;
+}
+a:active {
+  color: var(--bg-light);
 }
 ul {
   padding: 0;
