--- a/apps/Client/src/Style/Globle.css
+++ b/apps/Client/src/Style/Globle.css
@@ -9,7 +9,7 @@
   --assertive-color: #3d2c8d;
   --bg-color: #e2d7d7;
   --bg-color-alpha: #e2d7d763;
-  --bg-contrast-color: #150d1e;
+  --bg-contrast-color: #170d23;
   --font-stack: "cursive";
   --Secondary-font-stack: "Nunito", sans-serif;
   --border-radius: 0.5rem;
