--- a/apps/Client/src/Style/Globle.css
+++ b/apps/Client/src/Style/Globle.css
@@ -11,18 +11,18 @@
   --primary-800: #0d3b66;
   --primary-900: #071e33;
 
-  --secondary-50: #FFFCFC;
-  --secondary-100: #FCEAEA;
-  --secondary-200: #F6C7C7;
-  --secondary-300: #F1A4A4;
-  --secondary-400: #EB8080;
-  --secondary-500: #E65D5D;
-  --secondary-600: #DE2C2C;
-  --secondary-700: #B71C1C;
+  --secondary-50: #fffcfc;
+  --secondary-100: #fceaea;
+  --secondary-200: #f6c7c7;
+  --secondary-300: #f1a4a4;
+  --secondary-400: #eb8080;
+  --secondary-500: #e65d5d;
+  --secondary-600: #de2c2c;
+  --secondary-700: #b71c1c;
   --secondary-800: #861515;
-  --secondary-900: #550D0D;
-  --secondary-950: #3D0909
-  
+  --secondary-900: #550d0d;
+  --secondary-950: #3d0909;
+
   /* Neutral */
   --neutral-50: #f9f9f9;
   --neutral-100: #f0f0f0;
@@ -79,7 +79,7 @@
 
     /* change in dark mode later*/
     --primary-500: #4fa8ff;
-    --secondary-500: #E65D5D;
+    --secondary-500: #e65d5d;
   }
 }
 
